--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ baseurl = "https://nataliepjlin.github.io/bblist/"
 metaDataFormat = "yaml"
 title = "UNPLASTIFY YOUTH"
 theme = "blist"
+canonifyURLs = "true"
+
 
 DefaultContentLanguage = "en"
 DefaultContentLanguageInSubdir = true
@@ -13,8 +15,8 @@ DefaultContentLanguageInSubdir = true
     [languages.en.params]
       introTitle = "我們是安普拉絲特φ"
       introSubtitle = "我們是一群北一女中的學生<br>我們相信每一片土地和人同樣值得被友善對待"
-      introPhoto = "/bblist/up_team.jpg"
-      logo = "/bblist/logo.jpg"
+      introPhoto = "/up_team.jpg"
+      logo = "/logo.jpg"
     [[languages.en.menu.main]]
         name = "關於我們"
         url = "page/about/"
@@ -47,7 +49,7 @@ DefaultContentLanguageInSubdir = true
 
   # Custom copyright - optional
   copyright = "Copyright © 2022 - UNPLASTIFY · All rights reserved"
-  favicon = "/bblist/favicon.jpg"
+  favicon = "/favicon.jpg"
 
   # Color for the intro details and social links block, not applicable for dark mode
   # Supported values: Any color from TailwindCSS default colors
@@ -81,3 +83,4 @@ DefaultContentLanguageInSubdir = true
   [markup.goldmark.renderer]
     # Enable to include inline HTML
     unsafe = true
+
